@@ -1,6 +1,6 @@
 /*
  * Vouchers
- * Copyright 2022 Kiran Hart
+ * Copyright 2022-2025 Kiran Hart
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,130 +18,126 @@
 
 package ca.tweetzy.vouchers.listeners;
 
-import ca.tweetzy.flight.comp.enums.CompMaterial;
 import ca.tweetzy.flight.nbtapi.NBT;
+import ca.tweetzy.flight.settings.TranslationManager;
+import ca.tweetzy.flight.utils.Common;
+import ca.tweetzy.flight.utils.PlayerUtil;
 import ca.tweetzy.vouchers.Vouchers;
-import ca.tweetzy.vouchers.api.events.VoucherRedeemEvent;
-import ca.tweetzy.vouchers.api.events.VoucherRedeemResult;
 import ca.tweetzy.vouchers.api.voucher.Voucher;
-import ca.tweetzy.vouchers.gui.user.GUIConfirm;
+import ca.tweetzy.vouchers.gui.user.VoucherConfirmationGUI;
+import ca.tweetzy.vouchers.model.TimeConverter;
+import ca.tweetzy.vouchers.model.VoucherHelper;
+import ca.tweetzy.vouchers.model.manager.CooldownManager;
 import ca.tweetzy.vouchers.settings.Settings;
-import org.bukkit.Bukkit;
+import ca.tweetzy.vouchers.settings.Translations;
 import org.bukkit.entity.Player;
-import org.bukkit.event.Event;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.block.Action;
-import org.bukkit.event.inventory.PrepareAnvilEvent;
-import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
-import org.bukkit.event.player.PlayerItemHeldEvent;
-import org.bukkit.event.player.PlayerSwapHandItemsEvent;
 import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.UUID;
 
 public final class VoucherListeners implements Listener {
-
-	private final List<UUID> blockedFromDrop = new ArrayList<>();
 
 	@EventHandler
 	public void onVoucherRedeem(final PlayerInteractEvent event) {
 		final Player player = event.getPlayer();
 		ItemStack item = event.getItem();
-		EquipmentSlot hand = event.getHand();
+
+		if (event.getHand() == EquipmentSlot.OFF_HAND) {
+			return;
+		}
 
 		// prevent if sneaking
 		if (Settings.PREVENT_REDEEM_WHILE_SNEAKING.getBoolean() && player.isSneaking())
 			return;
 
-		if (item == null) item = event.getPlayer().getInventory().getItemInOffHand();
-
 		// not even a voucher
 		if (!Vouchers.getVoucherManager().isVoucher(item)) return;
 
-		if (event.getAction() == Action.RIGHT_CLICK_AIR || event.getAction() == Action.RIGHT_CLICK_BLOCK) {
-
-			final Voucher voucher = Vouchers.getVoucherManager().find(NBT.get(item, nbt -> (String) nbt.getString("Tweetzy:Vouchers")));
+		if (event.getAction() == Action.RIGHT_CLICK_AIR || event.getAction() == Action.LEFT_CLICK_BLOCK) {
+			final Voucher voucher = Vouchers.getVoucherManager().get(NBT.get(item, nbt -> (String) nbt.getString("Tweetzy:Vouchers")));
 			final String voucherArgsRaw = NBT.get(item, nbt -> (String) nbt.getString("Tweetzy:VouchersArgs"));
 
-			final List<String> voucherArgs = voucherArgsRaw == null ? null : voucherArgsRaw.split(" ").length == 0 ? null : List.of(voucherArgsRaw.split(" "));
+			final List<String> voucherArgs = voucherArgsRaw == null ? Collections.emptyList() : voucherArgsRaw.split(" ").length == 0 ? Collections.emptyList() : List.of(voucherArgsRaw.split(" "));
 
 			// invalid / deleted voucher
 			if (voucher == null) return;
 
-			event.setUseItemInHand(Event.Result.DENY);
-			voucher.setVoucherHand(hand); // Set the hand the voucher was redeemed in
+			// check permission
+			if (voucher.getSettings().usePermission() && !player.hasPermission(voucher.getSettings().getPermission())) {
+				Common.tell(player, TranslationManager.string(Translations.NOT_ALLOWED_TO_USE));
+				return;
+			}
 
-			if (!this.blockedFromDrop.contains(player.getUniqueId()))
-				this.blockedFromDrop.add(player.getUniqueId());
+			// check max uses
+			if(Vouchers.getRedeemManager().isAtRedeemLimit(player, voucher)) {
+				Common.tell(player, TranslationManager.string(Translations.REDEEM_LIMIT_REACHED));
+				return;
+			}
 
-			if (voucher.getOptions().isAskConfirm()) {
-				Vouchers.getGuiManager().showGUI(player, new GUIConfirm(player, confirmed -> {
+			if (voucher.getSettings().useCooldown() && !passedCooldown(player, voucher)) {
+				return;
+			}
+
+			// confirmation ask
+			if (voucher.getSettings().isAskForConfirm()) {
+				Vouchers.getGuiManager().showGUI(player, new VoucherConfirmationGUI(player, confirmed -> {
 					if (confirmed) {
-						if (voucherArgs == null)
-							Vouchers.getRedeemManager().redeemVoucher(player, voucher, false, false);
-						else Vouchers.getRedeemManager().redeemVoucher(player, voucher, false, false, voucherArgs);
-					} else {
-						Bukkit.getPluginManager().callEvent(new VoucherRedeemEvent(player, voucher, VoucherRedeemResult.FAIL_CANCELED_CONFIRM));
+						Vouchers.newChain().sync(() -> {
+							final boolean successfulUse = voucher.execute(player, voucherArgs.toArray(new String[0]));
+
+							// remove
+							if (successfulUse) {
+								Vouchers.getRedeemManager().registerRedeemIfApplicable(player, voucher);
+
+								if (voucher.getSettings().isRemoveOnUse())
+									PlayerUtil.removeSpecificItemQuantityFromPlayer(player, item, 1);
+
+								if (voucher.getSettings().useCooldown())
+									Vouchers.getCooldownManager().addPlayerToCooldown(player, voucher);
+							}
+						}).execute();
 					}
 
 					player.closeInventory();
-					this.blockedFromDrop.remove(player.getUniqueId());
-				}, fail -> {
-					this.blockedFromDrop.remove(player.getUniqueId());
-					Bukkit.getPluginManager().callEvent(new VoucherRedeemEvent(player, voucher, VoucherRedeemResult.FAIL_CANCELED_CONFIRM));
 				}));
 			} else {
-				if (voucherArgs == null)
-					Vouchers.getRedeemManager().redeemVoucher(player, voucher, false, false);
-				else Vouchers.getRedeemManager().redeemVoucher(player, voucher, false, false, voucherArgs);
+				final boolean successfulUse = voucher.execute(player, voucherArgs.toArray(new String[0]));
 
-				this.blockedFromDrop.remove(player.getUniqueId());
+				// remove
+				if (successfulUse) {
+					Vouchers.getRedeemManager().registerRedeemIfApplicable(player, voucher);
+
+					if (voucher.getSettings().isRemoveOnUse())
+						PlayerUtil.removeSpecificItemQuantityFromPlayer(player, item, 1);
+
+					if (voucher.getSettings().useCooldown())
+						Vouchers.getCooldownManager().addPlayerToCooldown(player, voucher);
+				}
 			}
 		}
 	}
 
-	@EventHandler
-	public void onVoucherSlotChange(final PlayerItemHeldEvent event) {
-		final Player player = event.getPlayer();
-		if (!this.blockedFromDrop.contains(player.getUniqueId())) return;
 
-		event.setCancelled(true);
-	}
+	private boolean passedCooldown(Player player, Voucher voucher) {
+		if (!voucher.getSettings().useCooldown()) return true;
 
-	@EventHandler
-	public void onVoucherDropAttempt(final PlayerDropItemEvent event) {
-		final Player player = event.getPlayer();
-		if (!this.blockedFromDrop.contains(player.getUniqueId())) return;
+		if (Vouchers.getCooldownManager().isPlayerInCooldown(player) && Vouchers.getCooldownManager().isPlayerInCooldownForVoucher(player, voucher)) {
+			long cooldownTime = Vouchers.getCooldownManager().getCooldownTime(player, voucher);
 
-		final ItemStack item = event.getItemDrop().getItemStack();
-		if (item == null) return;
+			if (System.currentTimeMillis() < cooldownTime) {
 
-		if (Vouchers.getVoucherManager().isVoucher(item))
-			event.setCancelled(true);
-	}
-
-	@EventHandler
-	public void onHandSwapWithVoucher(final PlayerSwapHandItemsEvent event) {
-		final ItemStack itemMain = event.getMainHandItem();
-		final ItemStack itemOff = event.getOffHandItem();
-
-		if ((itemMain != null && Vouchers.getVoucherManager().isVoucher(itemMain)) || (itemOff != null && Vouchers.getVoucherManager().isVoucher(itemOff))) {
-			event.setCancelled(true);
+				final String time = TimeConverter.convertSecondsToHumanReadable((cooldownTime - System.currentTimeMillis()) / 1000L);
+				Common.tell(player, TranslationManager.string(Translations.WAIT_FOR_COOLDOWN, "cooldown_time", time));
+				return false;
+			}
 		}
-	}
 
-	@EventHandler
-	public void onRenameAttempt(final PrepareAnvilEvent event) {
-		final ItemStack item = event.getResult();
-
-		if (item == null) return;
-		if (!Vouchers.getVoucherManager().isVoucher(item)) return;
-
-		event.setResult(CompMaterial.AIR.parseItem());
+		return true;
 	}
 }
